<!--
	Copyright 2019 Michael McMullin.
	Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<resources>
  <string name="app_name">FirstDay</string>
  <string name="app_summary">Whether it\'s your first day in a new job, a new role, or covering holidays, get the instructions you need, when you need them.</string>
  <string name="button_sign_in">Sign in</string>
  <string name="hint_search_procedures">Search procedures</string>
  <string name="button_scan_qr_code">Scan QR Code</string>
  <string name="button_scan_image">Read Camera Image</string>
  <string name="button_cancel">Cancel</string>
  <string name="title_my_procedures">My Procedures:</string>
  <string name="draft">Draft</string>
  <string name="procedures_no_internet">There may be more procedures, but you\'ll need an active internet connection.</string>
  <string name="title_steps">Steps:</string>
  <string name="title_comments">Comments (newest first):</string>
  <string name="hint_add_comment">Write a comment</string>
  <string name="button_add_comment">Add Comment</string>
  <string name="modal_dismiss_text">Dismiss</string>
  <string-array name="procedure_form_tabs">
    <item>Details</item>
    <item>Steps</item>
    <item>Tags</item>
  </string-array>
  <string name="title_new_procedure">Add a new procedure</string>
  <string name="hint_procedure_name">Procedure Name</string>
  <string name="hint_procedure_description">Description</string>
  <string name="title_status">Status:</string>
  <string-array name="procedure_status">
    <item>Draft</item>
    <item>Published (Private)</item>
    <item>Published (Public)</item>
  </string-array>
  <string name="title_new_step">Add Step</string>
  <string name="title_scan_qr_code">Scan QR Code</string>
  <string name="title_scan_photo">Search by Photo</string>
  <string name="button_save">Save</string>
  <string name="hint_step_name">Step Name</string>
  <string name="hint_step_description">Full Description</string>
  <string name="hint_add_tag">Add Tag</string>
  <string name="tags_instructions">Enter tags that users can search for to find this procedure.</string>
  <string name="menu_sign_out">Sign out</string>
  <string name="menu_share">Share</string>
  <string name="menu_comment">Comment</string>
  <string name="description_share">Enter the email address of the person you\'d like to share this procedure with.</string>
  <string name="button_share">Share Procedure</string>
  <string name="hint_share_procedure">Email Address</string>
  <string name="subject_share_procedure">FirstDay shared a procedure with you</string>
  <string name="message_procedure_shared_see_qr">If you download the FirstDay app, you can scan the attached QR code to access this procedure directly!</string>
  <string name="message_procedure_added">Procedure "%s" added successfully.</string>
  <string name="message_procedure_cancelled">Procedure cancelled.</string>
  <string name="message_no_qr_code">No QR code detected.</string>
  <string name="message_unrecognised_qr_code">Sorry, unrecognised QR code</string>
  <string name="message_no_image_labels">No image labels detected.</string>
  <string name="error_parse_date">Error parsing Date</string>
  <string name="error_no_procedure_name">Error: Please give this procedure a name.</string>
  <string name="error_no_steps">Error: Please add one or more steps.</string>
  <string name="error_failed_adding_procedure">Error Adding Procedure</string>
  <string name="error_finding_procedure">Error finding procedure</string>
  <string name="error_listing_procedures">Error finding procedures</string>
  <string name="error_finding_steps">Error finding steps</string>
  <string name="error_finding_comments">Error finding comments</string>
  <string name="title_search_results">Search Results: \'%s\'</string>
  <string name="button_take_photo">Take Photo</string>
  <string name="procedure_list_empty_default">No procedures found</string>
  <string name="procedure_list_empty_mine">You haven\'t created any procedures yet.</string>
  <string name="procedure_list_empty_search">Sorry, no procedures match that search term.</string>
  <string name="comments_list_empty">No comments yet.</string>

  <!-- Words to ignore in a search query (just a small selection for demonstration) -->
  <string-array name="search_stop_words">
    <item>a</item>
    <item>am</item>
    <item>an</item>
    <item>can</item>
    <item>how</item>
    <item>i</item>
    <item>the</item>
    <item>to</item>
    <item>use</item>
  </string-array>

</resources>
