<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".ProcedureFormStepFragment"
  android:padding="@dimen/spacing_med">

  <TextView
    android:id="@+id/edit_text_procedure_form_step_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/title_new_step"
    android:textStyle="bold"/>

  <EditText
    android:id="@+id/edit_text_procedure_form_step_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_step_name"
    android:maxLines="1"
    android:inputType="text"
    android:layout_marginTop="@dimen/spacing_med"
    app:layout_constraintTop_to="@+id/edit_text_procedure_form_step_title"/>

  <EditText
    android:id="@+id/edit_text_procedure_form_step_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_step_description"
    android:lines="5"
    android:scrollbars="vertical"
    android:layout_marginTop="@dimen/spacing_med"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_procedure_form_step_name"/>

  <ImageButton
    android:id="@+id/image_button_procedure_form_step_photo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_add_photo"
    android:layout_marginTop="@dimen/spacing_med"
    android:layout_marginBottom="@dimen/spacing_med"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_procedure_form_step_description"
    app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>