<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2019 Michael McMullin.
	Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
<android.support.constraint.ConstraintLayout
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".fragments.ProcedureFormDetailsFragment"
  android:padding="@dimen/spacing_med">

  <EditText
    android:id="@+id/edit_text_procedure_form_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_procedure_name"
    android:maxLines="1"
    android:inputType="text"
    android:layout_marginTop="@dimen/spacing_med"
    />

  <EditText
    android:id="@+id/edit_text_procedure_form_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_procedure_description"
    android:scrollbars="vertical"
    android:layout_marginTop="@dimen/spacing_med"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_procedure_form_name"/>

  <Spinner
    android:id="@+id/spinner_procedure_form_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:entries="@array/procedure_status"
    android:prompt="@string/title_status"
    android:layout_marginTop="@dimen/spacing_med"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_procedure_form_description"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/procedure_status_title"
    android:text="@string/title_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.FormLabel"
    app:layout_constraintBaseline_toBaselineOf="@id/spinner_procedure_form_status"/>

</android.support.constraint.ConstraintLayout>